<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/DefaultBackground">

            <TableRow
                android:id="@+id/rDate"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/dateImg"
                    app:srcCompat="@drawable/date" />

                <TextView
                    android:id="@+id/dateTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dateString"
                    android:textColor="@android:color/white"
                    android:textSize="30sp" />

                <EditText
                    android:id="@+id/editDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    android:textColor="@android:color/white"
                    android:textSize="30sp"
                    android:focusable="false"
                    android:longClickable="false"
                    />
            </TableRow>

            <TableRow
                android:id="@+id/rBmi"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/bmi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/bmiImg"
                    app:srcCompat="@drawable/bmi" />

                <TextView
                    android:id="@+id/weight2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bmi"
                    android:textColor="@android:color/white"
                    android:textSize="30sp" />

                <EditText
                    android:id="@+id/editBmi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="numberDecimal"

                    android:textColor="@android:color/white"
                    android:textSize="30sp" />
            </TableRow>

            <TableRow
                android:id="@+id/rWeight"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/weightImg"
                    app:srcCompat="@drawable/weight" />

                <TextView
                    android:id="@+id/weight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weight"
                    android:textColor="@android:color/white"
                    android:textSize="30sp" />

                <EditText
                    android:id="@+id/editWeight"
                    android:layout_width="5dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    android:nextFocusDown="@+id/editFat"
                    android:textColor="@color/TextWhite"
                    android:textSize="30sp">

                    <requestFocus />
                </EditText>
            </TableRow>

            <TableRow
                android:id="@+id/rFat"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/fatImg"
                    app:srcCompat="@drawable/bodyfat" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fatStr"
                    android:textColor="@android:color/white"
                    android:textSize="30sp" />

                <EditText
                    android:id="@+id/editFat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    android:nextFocusDown="@+id/editWater"
                    android:textColor="@color/TextWhite"
                    android:textSize="30sp" />
            </TableRow>

            <TableRow
                android:id="@+id/rWater"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/waterImg"
                    app:srcCompat="@drawable/water" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/waterStr"
                    android:textColor="@android:color/white"
                    android:textSize="30sp" />

                <EditText
                    android:id="@+id/editWater"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    android:nextFocusDown="@+id/muscular"
                    android:textColor="@color/TextWhite"
                    android:textSize="30sp" />
            </TableRow>

            <TableRow
                android:id="@+id/rMuscle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/muscleImg"
                    app:srcCompat="@drawable/musclemass" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/muscleStr"
                    android:textColor="@android:color/white"
                    android:textSize="30sp" />

                <EditText
                    android:id="@+id/muscular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    android:nextFocusDown="@+id/editRa"
                    android:textColor="@color/TextWhite"
                    android:textSize="30sp" />
            </TableRow>

            <TableRow
                android:id="@+id/rRating"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/imageView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/ratingImg"
                    app:srcCompat="@drawable/rating" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ratingStr"
                    android:textColor="@android:color/white"
                    android:textSize="30sp" />

                <EditText
                    android:id="@+id/editRa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number"
                    android:nextFocusDown="@+id/editBmr"
                    android:textColor="@color/TextWhite"
                    android:textSize="30sp" />
            </TableRow>

            <TableRow
                android:id="@+id/rBmr"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/bmrImg"
                    app:srcCompat="@drawable/bmr" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bmrStr"
                    android:textColor="@android:color/white"
                    android:textSize="30sp" />

                <EditText
                    android:id="@+id/editBmr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    android:nextFocusDown="@+id/editAge"
                    android:textColor="@color/TextWhite"
                    android:textSize="30sp" />
            </TableRow>

            <TableRow
                android:id="@+id/rAge"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/ageImg"
                    app:srcCompat="@drawable/age" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ageStr"
                    android:textColor="@android:color/white"
                    android:textSize="30sp" />

                <EditText
                    android:id="@+id/editAge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number"
                    android:nextFocusDown="@+id/editBone"
                    android:textColor="@color/TextWhite"
                    android:textSize="30sp" />
            </TableRow>

            <TableRow
                android:id="@+id/rBone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/boneImg"
                    app:srcCompat="@drawable/bone" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/boneStr"
                    android:textColor="@android:color/white"
                    android:textSize="30sp" />

                <EditText
                    android:id="@+id/editBone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    android:nextFocusDown="@+id/editVisceral"
                    android:textColor="@color/TextWhite"
                    android:textSize="30sp" />
            </TableRow>

            <TableRow
                android:id="@+id/rViscelar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/viscelarImg"
                    app:srcCompat="@drawable/visceralfat" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/viscelarStr"
                    android:textColor="@android:color/white"
                    android:textSize="30sp" />

                <EditText
                    android:id="@+id/editVisceral"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number"
                    android:nextFocusDown="@+id/editWeight"
                    android:textColor="@color/TextWhite"
                    android:textSize="30sp" />
            </TableRow>
        </TableLayout>
    </ScrollView>



</android.support.constraint.ConstraintLayout>